--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "express": "^4.16.4"
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "mocha": "^5.2.0"
   },
   "scripts": {
     "test": "jest"
