--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "bcrypt": "^3.0.2",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.3.15"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
