--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "mongoose": "^5.3.15"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
     "mocha": "^5.2.0"
   },
   "scripts": {
