--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API server for my 'React Todo' app",
   "main": "index.js",
   "dependencies": {
-    "bcrypt": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.3.15"
