--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "NODE_ENV=production node index.js",
-    "dev": "node index.js",
+    "dev": "nodemon index.js",
     "test": "nodemon --exec mocha --recursive"
   },
   "repository": {
