--- a/package.json
+++ b/package.json
@@ -3,13 +3,7 @@
   "version": "3.0.0",
   "description": "API server for my 'React Todo' app",
   "main": "index.js",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.3.15"
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
