--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "3.0.0",
   "description": "API server for my 'React Todo' app",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.16.4",
+    "mongoose": "^5.4.8"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
