--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API server for my 'React Todo' app",
   "main": "index.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.8"
   },
