--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "NODE_ENV=production node index.js",
     "dev": "nodemon index.js",
-    "test": "nodemon --exec mocha --recursive"
+    "test": "nodemon --exec mocha"
   },
   "repository": {
     "type": "git",
