--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
+    "mongodb": "^3.1.13",
     "mongoose": "^5.4.8"
   },
   "devDependencies": {
